[package]
name = "webgl-gui"
version = "0.1.0"
authors = ["Nathan Stoddard <nstoddard@users.noreply.github.com>"]
edition = "2018"

[dependencies]
collect-mac = "0.1.0"
fnv = "1.0.6"
rusttype = "0.7.3"
uid = "0.1.4"
cgmath = { git = "https://github.com/nstoddard/cgmath", features = ["serde"] }
wasm-bindgen = "0.2"
log = "0.4.6"
wasm-bindgen-futures = "0.3.9"
futures = "0.1.25"
js-sys = "0.3.9"
webgl-wrapper = { git = "https://github.com/nstoddard/webgl-wrapper" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  "EventTarget",
  "KeyboardEvent",
  "MouseEvent",
  "RequestInit",
  "RequestMode",
  "Request",
  "Response",
  "HtmlImageElement",
  "HtmlElement",
]
