[package]
name = "webgl-gui"
version = "0.1.0"
authors = ["Nathan Stoddard <nstoddard@users.noreply.github.com>"]
edition = "2018"

[dependencies]
collect-mac = "0.1.0"
fnv = "1.0.6"
rusttype = "0.8.2"
uid = "0.1.4"
cgmath = { git = "https://github.com/rustgd/cgmath", features = ["serde"] }
wasm-bindgen = "0.2.60"
log = "0.4.8"
wasm-bindgen-futures = "0.4.10"
futures = "0.3.4"
js-sys = "0.3.37"
webgl-wrapper = { git = "https://github.com/nstoddard/webgl-wrapper" }
wasm-stopwatch = "0.1.0"
serde = { version = "1.0.106", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.37"
features = [
  "EventTarget",
  "KeyboardEvent",
  "MouseEvent",
  "RequestInit",
  "RequestMode",
  "Request",
  "Response",
  "HtmlImageElement",
  "HtmlElement",
  "WheelEvent",
]
